# orm-benchmarks

./: Pipfile  pyproject.toml
benchmarks/: bench.sh  bench_all.sh  db.sh  present.py
benchmarks/sqlalchemy/: bench.py  test_a.py  test_b.py  test_c.py  test_d.py  test_e.py  test_f.py  test_g.py  test_h.py  test_j.py  test_k.py  test_l.py
benchmarks/sqlalchemysync/: bench.sh  models.py  test_a.py  test_b.py  test_c.py  test_d.py  test_e.py  test_f.py  test_g.py  test_h.py  test_i.py  test_j.py  test_k.py  test_l.py
benchmarks/tortoise/: test_a.py  test_b.py  test_c.py  test_f.py  test_g.py  test_h.py  test_i.py  test_j.py  test_l.py
