[tool.poetry]
name = "orm-benchmarks"
version = "0.1.0"
description = "Benchmarks for ORMs"
authors = ["long2ice <long2ice@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# ORM's
django = "*"
sqlalchemy = "1.4.44"
tortoise-orm = "*"
# DB drivers
asyncpg = "*"
# Recommended accelerators
uvloop = "*"
python-rapidjson = "*"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]
# Testing tools
vmprof = "*"
py-spy = "*"
tox = "*"
flake8 = "*"
isort = "*"
black = "*"
bandit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
